# image-text-retrieval

./: .gitignore  .pre-commit-config.yaml  params.yaml  pyproject.toml  readme.md
image_text_retrieval/: __init__.py  __main__.py  clip.py  config.py  params_models.py  settings.py
image_text_retrieval/ai/: clip.py
image_text_retrieval/api/: app.py  models.py  routes.py
image_text_retrieval/scripts/: pre_compute_embeddings.py
image_text_retrieval/ui/: app_ui.py
sample_data/: captions.csv
